[package]
name = "rusty_racing"
version = "0.1.0"
authors = ["Nathan Stocks <cleancut@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_engine = { path = "../rusty_engine", version = "0.3.0" }
nalgebra-glm = "0.6.0"
